--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -10,23 +10,17 @@
     android:layout_marginRight="8dp"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="8dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp">
+
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="9"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="9">
+                android:layout_weight="9"
+                android:layout_marginTop="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,14 +34,21 @@
                 android:gravity="center_vertical|start"
                 android:layout_marginStart="10dp" />
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="right|end"
                     android:layout_marginRight="16dp"
+                    android:src="@drawable/orderfood"
                     android:id="@+id/imgorder"
 
                     />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="9"
+                android:layout_marginTop="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,50 +57,77 @@
                 android:textAllCaps="true"
                 android:textStyle="italic"
                 android:textSize="20sp"
+                android:layout_weight="2"
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical|start"
                 android:layout_marginStart="10dp" />
-            <TextView
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginRight="16dp"
+                    android:src="@drawable/motorcycle"
+                    android:id="@+id/motorcycle"
+                    />
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginRight="16dp"
+                    android:src="@drawable/tick"
+                    android:id="@+id/status"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/order_contact"
-                android:text="0123456789"
-                android:textAllCaps="true"
-                android:textStyle="italic"
-                android:textSize="20sp"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:layout_marginStart="10dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/order_location"
-                android:text="location"
-                android:textAllCaps="true"
-                android:textStyle="italic"
-                android:textSize="20sp"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:layout_marginStart="10dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/order_price"
-                android:text="price"
-                android:textAllCaps="true"
-                android:textStyle="italic"
-                android:textSize="20sp"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:layout_marginStart="10dp" />
-        </LinearLayout>
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginRight="16dp"
-            android:id="@+id/order_item_count"
-            />
+                android:orientation="horizontal"
+                android:layout_weight="9"
+                android:layout_marginTop="5dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/order_price"
+                    android:text="price"
+                    android:textAllCaps="true"
+                    android:textStyle="italic"
+                    android:layout_weight="2"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical|start"
+                    android:layout_marginStart="10dp" />
 
-    </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="left"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginRight="16dp"
+                    android:src="@drawable/telephone"
+                    android:id="@+id/contact"
+                    />
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="left"
+                    android:src="@drawable/road"
+                    android:layout_marginLeft="18dp"
+                    android:id="@+id/location"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="9"
+                android:layout_marginTop="5dp">
+
+        </LinearLayout>
+         </LinearLayout>
 </androidx.cardview.widget.CardView>
