--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -29,10 +29,10 @@ app:layout_constraintTop_toTopOf="parent">
                     android:orientation="horizontal"
                     android:weightSum="1">
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:layout_weight="0.8">
+                    android:layout_weight="1">
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_category"
                         android:layout_width="wrap_content"
@@ -57,7 +57,7 @@ app:layout_constraintTop_toTopOf="parent">
                             android:id="@+id/tvprofilename"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Joseph"
+                            android:text="John Doe"
                             android:textStyle="italic"
                             android:textSize="15dp"
                             android:layout_gravity="center"
@@ -66,23 +66,19 @@ app:layout_constraintTop_toTopOf="parent">
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">
- <ImageView
-android:id="@+id/tvedit"
- android:layout_width="27dp"
-android:layout_height="27dp"
- android:src="@drawable/pen"
-android:background="@android:color/transparent"
-/>
+
  <ImageView
  android:id="@+id/tvsignout"
- android:layout_width="27dp"
- android:layout_height="27dp"
+ android:layout_width="30dp"
+ android:layout_height="30dp"
      android:layout_marginLeft="5dp"
      android:src="@drawable/exit"
 android:textAllCaps="true"
-android:textSize="15dp"
+android:textSize="15sp"
      android:textColor="@color/colorPrimary"
-     android:clickable="true"/>
+     android:clickable="true"
+     android:layout_marginStart="5dp"
+     android:focusable="true" />
                                    </LinearLayout>
 
                     </LinearLayout>
