--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,22 +6,21 @@
     android:layout_height="match_parent"
     tools:showIn="@layout/activity_welcome">
 
-
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"/>
+       />
 
     <LinearLayout
         android:id="@+id/layoutDots"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dots_height"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
         android:orientation="horizontal"
-        />
+        >
 
     <View
         android:layout_width="match_parent"
@@ -29,6 +28,7 @@
         android:alpha=".5"
         android:layout_above="@id/layoutDots"
         android:background="@color/White" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_next"
@@ -37,17 +37,19 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:background="@color/colorPrimary"
+        android:layout_marginBottom="50dp"
         android:text="@string/next"
         android:textColor="@android:color/white" />
 
-    <Button
-        android:id="@+id/btn_skip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="@color/colorPrimary"
-        android:text="@string/skip"
-        android:textColor="@android:color/white" />
+<!--    <Button-->
+<!--        android:id="@+id/btn_skip"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:background="@color/colorPrimary"-->
+<!--        android:layout_marginBottom="50dp"-->
+<!--        android:text="@string/skip"-->
+<!--        android:textColor="@android:color/white" />-->
 
 </RelativeLayout>
